kubernetes/api-deploy.yaml
---
apiVersion: "extensions/v1beta1"
kind: "Deployment"
metadata:
  name: "api"
  namespace: "itdays"
  labels:
    app: "api"
spec:
  replicas: 3
  selector:
    matchLabels:
      app: "api"
  template:
    metadata:
      labels:
        app: "api"
    spec:
      containers:
      - name: "microservice-api"
        image: "gcr.io/itdays-201118/microservice-api:latest"
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: api-ingress
  namespace: itdays
spec:
  backend:
    serviceName: api-service
    servicePort: 80
